Fix code block overflow on small screens

--- a/docs/seg2class.css
+++ b/docs/seg2class.css
@@ -6,6 +6,7 @@ html {
   border-radius: 3px;
   background-color: #e2e8f0;
   background-clip: padding-box;
+  overflow-x: auto;
 }
 
 .card {
